# src/dtos/students.dto.ts
@@ -1,4 +1,4 @@
-import { IsString, IsNotEmpty, IsPhoneNumber, IsOptional } from 'class-validator';
+import { IsString, IsNotEmpty, IsPhoneNumber } from 'class-validator';
 
 export class CreateStudentDto {
   @IsString()
@@ -13,19 +13,4 @@ export class CreateStudentDto {
   @IsNotEmpty()
   @IsPhoneNumber('UZ')
   public phone_number: string;
-}
-
-export class UpdateStudentDto {
-  @IsString()
-  @IsOptional()
-  public first_name?: string;
-
-  @IsString()
-  @IsOptional()
-  public last_name?: string;
-
-  @IsString()
-  @IsOptional()
-  @IsPhoneNumber('UZ')
-  public phone_number?: string;
 }
